# cooking_llm_agent

./: .dockerignore  .env.example  .gitignore  1_Chat.py  2_Logs.py  Dockerfile  README.md  agent_cli.py  app.py  chat_bubbles.py  docker-compose.yml  loaders.py  mock_api.py  pyproject.toml  session.py  test.py
backend/: config.py  dependencies.py  insomnia_collection.json  schemas.py  server.py  services.py  test_api.sh
docs/: ML_Industry.pptx  architecture.drawio  architecture.mmd  graph.drawio  graph.mmd
frontend/: 0_Login.py  1_Chat.py  Dockerfile  back_front_test.py
frontend/components/: layout.py
frontend/pages/: 0_Login.py  1_Chat.py  2_Logs.py
frontend/utils/: async_runner.py
scripts/: drop_volumes.sh  init.sql
src/agent/: calorie_enrichment_agent.py  clarification_agent.py  critic_agent.py  graph.py  models.py  recipe_retrieval_agent.py  report_generation.py  states.py  test_clarification.py  utils.py
src/agent/prompts/: __init__.py  clarification.py  recipe_retrieval.py
src/agent/schemas/: objects.py  structured_output.py
src/api_handler/: api_run.py  cache.py  constants.py  datamodels.py  nutrition_client.py  nutrition_funcs.py  recipes_client.py  recipes_funcs.py
src/database/: crud.py  init.sql  models.py
src/tools/: __init__.py  recipes_tools.py
